<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.ValorHoraActivity">


    <TextView
        android:layout_margin="10dp"
        android:textSize="24dp"
        android:text="@string/cu_nto_quieres_ganar_la_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>


    <EditText
        android:textSize="16dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="number"
        android:hint="@string/_500_lucas_1_mill_n_cu_nto"
        android:id="@+id/et_sueldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </EditText>

    <Button
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/calcular"
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>

    <TextView
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:text="@string/el_valor_de_tu_hora_es"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:id="@+id/tv_valor_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:text="@string/el_valor_de_tu_hora_se_calcula_en_base_a_un_trabajo_de_45_horas_semanales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</LinearLayout>