<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculadoraFragment">

        <TextView
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="24dp"
            android:text="@string/c_mo_cobrar_tu_trabajo"
            android:id="@+id/tv_como_cobrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:text="@string/horas_que_necesitas_para_entregar_el_proyecto"
                    android:id="@+id/tv_horas_trabajadas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <EditText
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:hint="@string/cantidad_de_horas"
                    android:id="@+id/et_horas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:text="@string/cuanto_cobras_por_hora_sino_lo_sabes_haz_click_en_el_bot_n_valor_de_tu_hora"
                    android:id="@+id/tv_sueldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <EditText
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:hint="@string/_10_000"
                    android:id="@+id/et_sueldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:text="@string/costo_aproximado_de_los_materiales"
                    android:id="@+id/tv_materiales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <EditText
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:inputType="number"
                    android:hint="$100.000?"
                    android:id="@+id/et_materiales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </EditText>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/calcular"
            android:id="@+id/btn_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/valor_hora"
            android:id="@+id/btn_calcular_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

</LinearLayout>
</ScrollView>