<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".actividades.ResultadoActivity">

    <TextView

        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="24dp"
        android:text="@string/datos_ingresado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/horas_que_necesitas_para_entregar_el_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/no_funcion"
                android:id="@+id/tv_horas_trabajadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/valor_de_tu_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/no_funcion"
                android:id="@+id/tv_sueldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/valor_de_los_materiales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="@string/no_funcion"
                android:id="@+id/tv_materiales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:text="@string/puedes_cobrar_por_tu_trabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="24dp"
        android:text="@string/no_funcion"
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</LinearLayout>