<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:backgroundTint="@color/md_light_blue_500"
        android:id="@+id/cv_trabajo"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight=".2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="2"
                android:textColor="@color/white"
                android:text="@string/nombre_trabajo"
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/tv_nombre_trabajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="2"
                android:textColor="@color/white"
                android:text="@string/descripci_n_del_trabajo"
                android:textSize="16dp"
                android:id="@+id/tv_descripcion_trabajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:textStyle="bold"
                android:shadowColor="@color/black"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="2"
                android:textColor="@color/white"
                android:text="@string/precio_del_trabajo"
                android:textSize="16dp"
                android:id="@+id/tv_precio_trabajo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            </LinearLayout>
            <LinearLayout

                android:gravity="center"
                android:layout_weight=".8"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:background="@color/fui_transparent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_share"
                    android:id="@+id/btn_compartir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </ImageButton>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>